--- a/src/components/ShopItemCard.css
+++ b/src/components/ShopItemCard.css
@@ -6,7 +6,7 @@
     align-items: center;
     background-color: #3A7CA5;
     width: 250px;
-    height: 370px;
+    height: 390px;
     margin: 10px;
     padding: 10px;
     border: solid;
@@ -14,10 +14,15 @@
     font-weight: bolder;
 }
 
-img {
+.shopItemImage {
     width: 200px;
     height: 250px;
     border: 3px solid #ffffff;
+
+    &:hover {
+        height: 255px;
+        width: 205px;
+    }
 }
 
 h2 {
@@ -34,6 +39,7 @@ h2 {
     width: 90px;
     border: 3px solid #ffffff;
     font-weight: bolder;
+    font-size: medium;
     color: rgba(45, 45, 47, 0.886);
     border-radius: 5px;
     background: rgba(255, 217, 0, 0.8);
